test/negative/constant_in_reg.net
INPUT
OUTPUT b
VAR b
IN
b = REG 0
